# VarInt

./: .gitignore  BigInt.cpp  BigInt.h  BigIntTest.cpp  BigIntTest.h  CMakeLists.txt  CMakePresets.json  CalculatePrimes.cpp  LICENSE.md  README.md  VarInt.cpp  VarInt.h  VarIntTest.cpp  VarIntTest.h  VarInt_GTest.cpp  VarInt_Test.cpp  main.cpp  output.md
